# email-provider-dns-check

./: .gitignore  AGENTS.md  GOALS.md  README.md  provider-dns-check  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: renovate.json
.github/workflows/: codeql.yml  mirror.yml  tests.yml
scripts/: update_requirements.py
src/provider_check/: __init__.py  api.py  checker.py  cli.py  detection.py  dns_resolver.py  output.py  provider_config.py  record_registry.py  runner.py  status.py
tests/: checker_dmarc_support.py  checker_mx_support.py  checker_spf_support.py  checker_txt_support.py  factories.py  support.py  test_api.py  test_checker_address.py  test_checker_caa.py  test_checker_cname.py  test_checker_core.py  test_checker_dkim.py  test_checker_dmarc.py  test_checker_dmarc_errors.py  test_checker_dmarc_requirements.py  test_checker_dmarc_strict.py  test_checker_logging.py  test_checker_mx.py  test_checker_mx_errors.py  test_checker_mx_optional.py  test_checker_mx_required.py  test_checker_spf.py  test_checker_spf_mechanisms.py  test_checker_spf_modifiers.py  test_checker_spf_policy.py  test_checker_srv.py  test_checker_srv_errors.py  test_checker_srv_optional.py  test_checker_srv_required.py  test_checker_txt.py  test_checker_txt_errors.py  test_checker_txt_optional.py  test_checker_txt_required.py  test_cli_color_flags.py  test_cli_core.py  test_cli_dmarc_flags.py  test_cli_dns_servers.py  test_cli_errors.py  test_cli_exit_codes.py  test_cli_provider_detect.py  (+31 more)
tests/checker/: mx_support.py  spf_support.py  srv_support.py  test_checker_caa.py  test_checker_core.py  test_checker_dkim.py  test_checker_dmarc_errors.py  test_checker_dmarc_requirements.py  test_checker_dmarc_strict.py  test_checker_logging.py  test_checker_mx_errors.py  test_checker_mx_optional.py  test_checker_mx_required.py  test_checker_negative_address_ptr.py  test_checker_negative_caa_srv_tlsa.py  (+16 more)
(+165 files in other folders)
